only protect limited update endpoints
